--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"NoGameNoLife_Theme","description":"I hope you enjoy the theme","author":"DevilsTheAvenged","version":"1.2"}*//{}
+//META{"name":"NoGameNoLife_Theme","description":"I hope you enjoy the theme","author":"DevilsTheAvenged","version":"1.3"}*//{}
 .app {
 	background: url("https://wallpapercave.com/wp/wp1825485.jpg") 0/cover !important;
 }
@@ -942,16 +942,18 @@ a,
 .theme-dark .searchFilter-1fJ0cd {
     background-color: #4F1C4F;
 }
-.theme-dark .search-popout {
+.theme-dark .searchPopout-38pRYh {
     box-shadow: none;
 }
-.search-popout {
+.theme-dark .searchPopout-38pRYh,
+.theme-dark .calendarPicker-16Q6sl .react-datepicker,
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__header {
     background-color: #4F1C4F;
     border: none;
     border-radius: 0px;
     box-shadow: none;
 }
-.search-popout .option:after,
+.option-1MvVr1:after,
 .search-popout .option:before {
     background: #4F1C4F;
 }
@@ -961,34 +963,35 @@ a,
 .search-popout .option.selected {
     background-color: #840058;
 }
-.search-popout .option.selected:after {
+.option-1MvVr1.selected-_bTXUG:after,
+.theme-dark .option-1MvVr1.selected-_bTXUG {
     background: #840058;
 }
 .search-popout .option.selected:before,
-.search-popout .option.selected:after {
+.option-1MvVr1.selected-_bTXUG:after,
+.theme-dark .option-1MvVr1.selected-_bTXUG {
     background-color:  #840058;
 }
 .search-popout .search-option .filter,
 .search-popout .option .answer,
-.search-popout .option strong,
+.theme-dark .option-1MvVr1 strong,
 .search-popout .option.user .displayed-nick,
 .search-popout .search-query .search-for strong,
 .theme-brand .contentTitle-sL6DrN strong {
     color: white;
 }
-.search-popout .search-query {
+.theme-dark .searchQuery-3o17HL {
     border-bottom: none;
 }
-.search-popout .date-picker .date-picker-hint .hint-value {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz .hintValue-45YyWZ {
     background-color: #4F1C4F;
 }
-.search-popout .date-picker .date-picker-hint .hint-value:hover {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz .hintValue-45YyWZ:hover {
     background-color: #840058;
 }
-.search-popout .date-picker {
-    border-radius: 0;
-    border-top: none;
-    box-shadow: none;
+.theme-dark .searchOption-vKNX73 .filter-3kZ3tT, .theme-dark .option-1MvVr1 .filter-3kZ3tT {
+   color: white !important;
+   font-weight: bold;
 }
 .theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker, 
 .theme-light .calendarPicker-16Q6sl .react-datepicker {
@@ -1009,7 +1012,7 @@ a,
     background-color: black;
     border-color: transparent;
 }
-.search-popout .date-picker .date-picker-hint {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz {
     border-top: none;
 }
 .theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day--outside-month, 
@@ -1017,27 +1020,15 @@ a,
     background-color: black;
     color: rgba(255,255,255,.3);
 }
-.theme-dark .react-datepicker__day.react-datepicker__day--sun.react-datepicker__day--disabled.react-datepicker__day--outside-month,
-.theme-dark .react-datepicker__day.react-datepicker__day--mon.react-datepicker__day--disabled.react-datepicker__day--outside-month,
-.theme-dark .react-datepicker__day.react-datepicker__day--tue.react-datepicker__day--disabled.react-datepicker__day--outside-month,
-.theme-dark .react-datepicker__day.react-datepicker__day--wed.react-datepicker__day--disabled.react-datepicker__day--outside-month,
-.theme-dark .react-datepicker__day.react-datepicker__day--thu.react-datepicker__day--disabled.react-datepicker__day--outside-month,
-.theme-dark .react-datepicker__day.react-datepicker__day--fri.react-datepicker__day--disabled.react-datepicker__day--outside-month,
-.theme-dark .react-datepicker__day.react-datepicker__day--sat.react-datepicker__day--disabled.react-datepicker__day--outside-month {
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day--disabled, .theme-dark .calendarPicker-16Q6sl .react-datepicker__day--outside-month {
      background-color: black !important;
      color: rgba(255,255,255,.4);
 }
-.theme-dark .react-datepicker__day.react-datepicker__day--sun.react-datepicker__day--outside-month:hover,
-.theme-dark .react-datepicker__day.react-datepicker__day--mon.react-datepicker__day--outside-month:hover,
-.theme-dark .react-datepicker__day.react-datepicker__day--tue.react-datepicker__day--outside-month:hover,
-.theme-dark .react-datepicker__day.react-datepicker__day--wed.react-datepicker__day--outside-month:hover,
-.theme-dark .react-datepicker__day.react-datepicker__day--thu.react-datepicker__day--outside-month:hover,
-.theme-dark .react-datepicker__day.react-datepicker__day--fri.react-datepicker__day--outside-month:hover,
-.theme-dark .react-datepicker__day.react-datepicker__day--sat.react-datepicker__day--outside-month:hover {
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day--disabled:hover, .theme-dark .calendarPicker-16Q6sl .react-datepicker__day--outside-month:hover {
      background-color: #240D24 !important;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after, 
-.theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after {
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after {
+
     background-color: transparent;
 }
 .theme-dark .react-datepicker__day.react-datepicker__day--sun.react-datepicker__day--disabled.react-datepicker__day--outside-month:hover,
@@ -1061,8 +1052,7 @@ a,
     background-color: #5F305F;
     color: #fff;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day:hover,  
-.theme-light .calendarPicker-16Q6sl .react-datepicker__day:hover {
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:hover, .theme-dark .calendarPicker-16Q6sl .react-datepicker__day:hover {
     background-color: #5F305F;
     color: #fff;
 }
@@ -1079,7 +1069,9 @@ a,
 .react-datepicker__day.react-datepicker__day--thu,
 .react-datepicker__day.react-datepicker__day--fri,
 .react-datepicker__day.react-datepicker__day--sat,
-.theme-dark .react-datepicker__day.react-datepicker__day--sun {
+.theme-dark .react-datepicker__day.react-datepicker__day--sun,
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--disabled, 
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--disabled:hover {
       background: #331233;
       border: none;
 }
